updated version to 1.1.40

--- a/lib/src/components/fo_select_component/fo_select_component.html
+++ b/lib/src/components/fo_select_component/fo_select_component.html
@@ -32,10 +32,11 @@
         </div>
         <material-select-dropdown-item
                 *ngFor="let option of selectionOptions.optionsList"
+                class="text-left"
                 (trigger)="onSelect(option.id)"
                 [componentRenderer]="componentRenderer"
                 [selected]="option.id == selectedId">
-            {{option.toString() | phrase}}
+            <span *ngIf="componentRenderer == null">{{option.toString() | phrase}}</span>
         </material-select-dropdown-item>
     </material-dropdown-select>
 
