--- a/lib/src/components/fo_multi_select_component/fo_multi_select_component.html
+++ b/lib/src/components/fo_multi_select_component/fo_multi_select_component.html
@@ -12,11 +12,13 @@
                 [filterable]="selectionOptions">
         </material-select-searchbox>
     </div>
-    <material-select-dropdown-item *ngFor="let option of selectionOptions.optionsList" class="text-left">
+    <material-select-dropdown-item
+            *ngFor="let option of selectionOptions.optionsList"
+            class="text-left"
+            (click)="onToggle(option.id, !selectedIds.contains(option.id))">
         <material-checkbox
                 label="{{option.toString() | phrase}}"
-                [checked]="selectedIds.contains(option.id)"
-                (click)="onToggle(option.id, !selectedIds.contains(option.id))">
+                [checked]="selectedIds.contains(option.id)">
         </material-checkbox>
     </material-select-dropdown-item>
 </material-dropdown-select>
