--- a/lib/src/components/fo_select_component/fo_select_component.scss
+++ b/lib/src/components/fo_select_component/fo_select_component.scss
@@ -26,6 +26,11 @@
             width: 100%;
         }
 
+        .icon
+        {
+            margin-right: 0.5rem;
+        }
+
         .button
         {
             margin-left: 0.5rem;
