--- a/lib/src/components/fo_select_component/fo_select_component.scss
+++ b/lib/src/components/fo_select_component/fo_select_component.scss
@@ -19,16 +19,20 @@
         material-dropdown-select
         {
             flex: auto;
+
+            material-select-dropdown-item
+            {
+                material-icon
+                {
+                    margin-right: 0.5rem;
+                }
+            }
+
         }
         material-dropdown-select.full-width
         {
             flex: auto;
             width: 100%;
-        }
-
-        .icon
-        {
-            margin-right: 0.5rem;
         }
 
         .button
