--- a/lib/src/components/fo_select_component/fo_select_component.scss
+++ b/lib/src/components/fo_select_component/fo_select_component.scss
@@ -16,7 +16,7 @@
     div.flex-container
     {
         display: flex;
-        material-dropdown-select
+        ::ng-deep material-dropdown-select
         {
             flex: auto;
 
