updated version to 1.1.40

--- a/lib/src/components/fo_select_component/fo_select_component.scss
+++ b/lib/src/components/fo_select_component/fo_select_component.scss
@@ -16,18 +16,9 @@
     div.flex-container
     {
         display: flex;
-        ::ng-deep material-dropdown-select
+        material-dropdown-select
         {
             flex: auto;
-
-            material-select-dropdown-item
-            {
-                material-icon
-                {
-                    margin-right: 0.5rem;
-                }
-            }
-
         }
         material-dropdown-select.full-width
         {
@@ -39,5 +30,10 @@
         {
             margin-left: 0.5rem;
         }
+    }
+
+    ::ng-deep .marginLeft
+    {
+        margin-left: 0.5rem;
     }
 }
