updated version to 1.1.40

--- a/lib/src/components/fo_select_component/fo_select_component.html
+++ b/lib/src/components/fo_select_component/fo_select_component.html
@@ -35,7 +35,10 @@
                 class="text-left"
                 (trigger)="onSelect(option.id)"
                 [selected]="option.id == selectedId">
-            <material-icon *ngIf="icon" [icon]="option.toString()" size="large" class="marginLeft"></material-icon>
+            <span *ngIf="icon">
+                <material-icon [icon]="option.toString()" size="large"></material-icon>
+                <span>&nbsp;</span>
+            </span>
             <span>{{option.toString() | phrase}}</span>
         </material-select-dropdown-item>
     </material-dropdown-select>
