--- a/lib/src/components/fo_sidebar_component/fo_sidebar_component.html
+++ b/lib/src/components/fo_sidebar_component/fo_sidebar_component.html
@@ -63,3 +63,9 @@
         </tr>
     </table>
 </div>
+
+<fo-modal
+        title="{{'instructions' | phrase}}"
+        [(visible)]="instructionsModalVisible">
+    <iframe  [attr.height]="calcIFrameHeight()" [src]="instructionsUrl" frameborder="0" allowfullscreen scrolling="no"></iframe>
+</fo-modal>
