--- a/lib/src/components/fo_data_table_component/fo_data_table_component.html
+++ b/lib/src/components/fo_data_table_component/fo_data_table_component.html
@@ -1,7 +1,7 @@
 <div class="row expand">
     <div class="s12 m7 l8 col">
         <h3 class="color-black margin-bottom-none">
-            {{title | phrase}}
+            {{label | phrase}}
             <material-icon
                     baseline
                     *ngIf="description != null"
@@ -67,13 +67,13 @@
                     [class.hide-for-small]="smallHiddenCol.contains(cell)"
                     [class.hide-for-medium]="mediumHiddenCol.contains(cell)"
                     [class.hide-for-large]="largeHiddenCol.contains(cell)">
-                {{data[key][cell]?.toString()}}
+                {{data[key][cell]?.toString() | phrase:false}}
             </td>
             <td *ngFor="let cell of evaluatedColumns.keys"
                 [class.hide-for-small]="smallHiddenCol.contains(cell)"
                 [class.hide-for-medium]="mediumHiddenCol.contains(cell)"
                 [class.hide-for-large]="largeHiddenCol.contains(cell)">
-                {{evaluatedColumns[cell](data[key])}}
+                {{evaluatedColumns[cell](data[key]) | phrase:false}}
             </td>
             <td *ngIf="showDeleteButtons" class="text-center">
                 <material-icon
@@ -133,6 +133,7 @@
                             class="display-inline-block"
                             [disabled]="disabled"
                             [options]="rowOptions"
+                            [sort]="false"
                             [selectedId]="selectedRowOptionId"
                             (selectedIdChange)="selectedRowOptionId = $event; setIndices(0);">
                     </fo-select>
