multi-input flex

--- a/lib/components/fo_multi_input_component/fo_multi_input_component.html
+++ b/lib/components/fo_multi_input_component/fo_multi_input_component.html
@@ -1,14 +1,16 @@
-<material-input
-        label="{{label | phrase}}" floatingLabel
-        [leadingText]="leadingText"
-        [fullWidth]="true"
-        [displayBottomPanel]="false"
-        (keyup)="onKeyUp($event)"
-        [(ngModel)]="inputValue">
-</material-input>
-<material-button raised clear-size (trigger)="add()">
-    <material-icon icon="add_outline" size="large"></material-icon>
-</material-button>
+<div class="flex-container">
+    <material-input
+            label="{{label | phrase}}" floatingLabel
+            [leadingText]="leadingText"
+            [fullWidth]="true"
+            [displayBottomPanel]="false"
+            (keyup)="onKeyUp($event)"
+            [(ngModel)]="inputValue">
+    </material-input>
+    <material-button [disabled]="inputValue == null || inputValue.isEmpty" raised clear-size (trigger)="add()">
+        <material-icon icon="add_outline" size="small"></material-icon>
+    </material-button>
+</div>
 <div>
     <material-chip *ngFor="let item of value" (remove)="remove(item)">{{item}}</material-chip>
 </div>
