--- a/lib/components/fo_select_component/fo_select_component.scss
+++ b/lib/components/fo_select_component/fo_select_component.scss
@@ -7,7 +7,6 @@
     label
     {
         width: 100%;
-        margin-bottom: 0.5rem;
         display: inline-block;
         font-size: 0.75em;
         color: #888;
@@ -29,6 +28,7 @@
         .button
         {
             margin-left: 0.5rem;
+            min-width: 2rem;
         }
     }
 }
