--- a/lib/components/fo_multi_input_component/fo_multi_input_component.html
+++ b/lib/components/fo_multi_input_component/fo_multi_input_component.html
@@ -15,7 +15,7 @@
         <material-icon icon="add_outline" size="small"></material-icon>
     </material-button>
 </div>
-<div *ngIf="control.errors != null">
+<div class="margin-top-small margin-bottom-small" *ngIf="control.errors != null">
     <span class="color-alert">{{control.errors['error'}}</span>
 </div>
 <div>
