fo-multi-input style update

--- a/lib/components/fo_multi_input_component/fo_multi_input_component.html
+++ b/lib/components/fo_multi_input_component/fo_multi_input_component.html
@@ -15,8 +15,8 @@
         <material-icon icon="add_outline" size="small"></material-icon>
     </material-button>
 </div>
-<div class="margin-top-small margin-bottom-small" *ngIf="control.errors != null">
-    <span class="color-alert">{{control.errors['error']}}</span>
+<div class="margin-top-none margin-bottom-small" *ngIf="control.errors != null">
+    <span class="error color-alert">{{control.errors['error']}}</span>
 </div>
 <div>
     <material-chip *ngFor="let item of value" (remove)="remove(item)">{{item}}</material-chip>
