fo-select style updates

--- a/lib/components/fo_select_component/fo_select_component.scss
+++ b/lib/components/fo_select_component/fo_select_component.scss
@@ -10,6 +10,8 @@
         display: inline-block;
         font-size: 0.75em;
         color: #888;
+        margin-top: 4px;
+        margin-bottom: 5px;
     }
 
     div.flex-container
