--- a/lib/components/fo_sidebar_component/fo_sidebar_component.html
+++ b/lib/components/fo_sidebar_component/fo_sidebar_component.html
@@ -14,8 +14,7 @@
                                 <material-list-item
                                         *ngFor="let item of category.items"
                                         [routerLink]="[item.routerLink]">
-                                    <material-icon  [icon]="item.icon" baseline></material-icon>&nbsp;
-                                    {{item.label | phrase}}
+                                    <material-icon  [icon]="item.icon" baseline></material-icon>&nbsp;{{item.label | phrase}}
                                 </material-list-item>
                             </div>
                         </material-list>
