--- a/lib/components/fo_multi_select_component/fo_multi_select_component.html
+++ b/lib/components/fo_multi_select_component/fo_multi_select_component.html
@@ -4,6 +4,7 @@
         [disabled]="disabled || selectionOptions == null"
         buttonText="{{buttonText | phrase}}"
         [popupMatchInputWidth]="false"
+        [autoDismiss]="true"
         [(visible)]="visible"
         id="select">
     <div *ngIf="showSearch" header>
