FoDataTable now displays check/nothing for bool columns #2 (not for evalCols)

--- a/lib/components/fo_data_table_component/fo_data_table_component.html
+++ b/lib/components/fo_data_table_component/fo_data_table_component.html
@@ -79,13 +79,7 @@
                 [class.hide-for-small]="smallHiddenCol.contains(cell)"
                 [class.hide-for-medium]="mediumHiddenCol.contains(cell)"
                 [class.hide-for-large]="largeHiddenCol.contains(cell)">
-                <span *ngIf="!isBool(evaluatedColumns[key][cell])">{{evaluatedColumns[cell](data[key]) | phrase:false}}</span>
-                <material-icon
-                        *ngIf="evaluatedColumns[key][cell] == true"
-                        baseline
-                        icon="check"
-                        size="small">
-                </material-icon>
+                <span>{{evaluatedColumns[cell](data[key]) | phrase:false}}</span>
             </td>
             <td *ngIf="showDeleteButtons" class="text-center">
                 <material-icon
