--- a/lib/components/fo_number_input_component/fo_number_input_component.html
+++ b/lib/components/fo_number_input_component/fo_number_input_component.html
@@ -1,11 +1,19 @@
 <label>{{label | phrase}}</label>
 <div>
     <span>{{leadingText | phrase}}&nbsp;</span>
-    <material-button raised clear-size dense [disabled]="disabled || value <= min" (mousedown)="onMouseDown(-step)" (touchstart)="onMouseDown(-step)">
+    <material-button
+            raised clear-size dense
+            [disabled]="disabled || (value != null && value <= min)"
+            (mousedown)="onMouseDown(-step)"
+            (touchstart)="onMouseDown(-step)">
         <material-icon icon="keyboard_arrow_down" size="medium"></material-icon>
     </material-button>
     <span id="valueOutput">{{formattedValue}}</span>
-    <material-button raised clear-size dense [disabled]="disabled || value >= max" (mousedown)="onMouseDown(step)" (touchstart)="onMouseDown(step)">
+    <material-button
+            raised clear-size dense
+            [disabled]="disabled || (value != null && value >= max)"
+            (mousedown)="onMouseDown(step)"
+            (touchstart)="onMouseDown(step)">
         <material-icon icon="keyboard_arrow_up" size="medium"></material-icon>
     </material-button>
     <span>&nbsp;{{trailingText | phrase:false}}</span>
