Added titleImageUrl to FoModal and FoLogin #2

--- a/lib/components/fo_login_component/fo_login_component.html
+++ b/lib/components/fo_login_component/fo_login_component.html
@@ -5,7 +5,7 @@
         [showCloseButton]="false"
         [titleImageUrl]="titleImageUrl"
         [error]="errorMessage | phrase">
-    <h4>{{state | phrase}}</h4>
+    <h4 class="title">{{state | phrase}}</h4>
     <div class="login-container" *ngIf="state == 'login'">
         <material-input
                 [disabled]="client.loading"
