--- a/lib/components/fo_app_layout/fo_app_layout_component.html
+++ b/lib/components/fo_app_layout/fo_app_layout_component.html
@@ -13,7 +13,7 @@
                                 <div label>{{category.title | phrase}}</div>
                                 <material-list-item
                                         *ngFor="let item of category.items"
-                                        [routerLink]="[item.routerLink, item.routeParams]">
+                                        (click)="onNavigate(item)">
                                     <material-icon [icon]="item.icon" baseline></material-icon>&nbsp;{{item.label | phrase}}
                                 </material-list-item>
                             </div>
@@ -23,9 +23,9 @@
                             <div *ngFor="let category of categories">
                                 <div
                                         *ngFor="let item of category.items"
-                                        [routerLink]="[item.routerLink, item.routeParams]"
                                         class="clickable text-center padding-top-small padding-bottom-small mini-item"
-                                        [materialTooltip]="item.label | phrase">
+                                        [materialTooltip]="item.label | phrase"
+                                        (click)="onNavigate(item)">
                                     <material-icon [icon]="item.icon" size="x-large" baseline></material-icon>
                                 </div>
                                 <hr />
@@ -55,7 +55,7 @@
                             </material-button>
                         </h3>
                         <div id="page-content">
-                            <router-outlet></router-outlet>
+                            <ng-content></ng-content>
                         </div>
                     </div>
                 </div>
@@ -70,3 +70,4 @@
         [(visible)]="instructionsModalVisible">
     <iframe [attr.width]="calcIFrameWidth()" [attr.height]="calcIFrameHeight()" [src]="instructionsUrl" frameborder="0" allowfullscreen scrolling="no"></iframe>
 </fo-modal>
+-->
